adding inputs back

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -16,7 +16,10 @@
 				"D2"
 			],
 			"inputs": [
-                "AppleTV"
+                "AppleTV",
+                "VIA1",
+                "PC1",
+                "ChromeCast"
 			]
 		},
 		{
