add sharing for our cube to test

--- a/ITB-1101/config.json
+++ b/ITB-1101/config.json
@@ -89,6 +89,7 @@
 			"uipath": "/blueberry",
 			"preset": "Clark/John Flatpanel",
 			"features": [
+                "share"
 			]
 		},
 		{
@@ -96,6 +97,7 @@
 			"uipath": "/blueberry",
 			"preset": "Clark/John Flatpanel",
 			"features": [
+                "share"
 			]
 		}
 	],
