--- a/SWKT-1153/config.json
+++ b/SWKT-1153/config.json
@@ -2,40 +2,42 @@
 	"api": [
 		"localhost"
 	],
+	"panels": [
+		{
+			"hostname": "SWKT-1153-CP1",
+			"uipath": "/blueberry",
+			"preset": "Display",
+            		"features": [
+            		]
+		}
+	],
+	"presets": [
+		{
+			"name": "Display",
+			"icon": "tv",
+			"displays": [
+				"D1"
+			],
+			"shareableDisplays": [
+			],
+			"audioDevices": [
+				"D1"
+			],
+			"inputs": [
+                		"HDMI1"
+			],
+			"independentAudioDevices": [
+				"D1"
+			]
+		}
+	],
+	
     "inputConfiguration": [
         {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         }
     ],
-    "roomWideAudios": [
-    ],
-	"presets": [
-		{
-			"name": "Display",
-			"displays": [
-				"D1"
-			],
-			"icon": "tv",
-			"audioDevices": [
-				"D1"
-			],
-			"inputs": [
-                "HDMI1"
-			]
-		}
-	],
-	"panels": [
-		{
-			"hostname": "SWKT-1153-CP1",
-			"uipath": "/blueberry",
-			"presets": [
-				"Display"
-			],
-			"features": [
-			],
-			"independentAudios": [
-			]
-		}
-	]
+    "roomWideAudio": [
+    ]
 }
