--- a/CTB-410/config.json
+++ b/CTB-410/config.json
@@ -320,7 +320,13 @@
             "icon": "settings_input_hdmi"
         }
     ],
-    "roomWideAudios": [
-        "D1"
+    "audioConfiguration": [
+        {
+            "display": "D1",
+            "audioDevices": [
+                "D1"
+            ],
+            "roomWide": true
+        }
     ]
 }
