--- a/ITB-1010/config.json
+++ b/ITB-1010/config.json
@@ -6,18 +6,19 @@
         {
             "name": "VIA1",
             "icon": "settings_input_antenna"
-        }, {
+        }, 
+        {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
-        },{
+        },
+        {
             "name": "VIA2",
             "icon": "settings_input_antenna"
-        }, {
+        },
+        {
             "name": "HDMI2",
             "icon": "settings_input_hdmi"
         }
-    ],
-    "roomWideAudios": [
     ],
 	"presets": [
 		{
@@ -57,25 +58,17 @@
 		{
 			"hostname": "ITB-1010-CP1",
 			"uipath": "/blueberry",
-			"presets": [
-				"South Display"
-			],
+			"preset": "South Display",
 			"features": [
-                "display-to-all"
-			],
-			"independentAudios": [
+                "share"
 			]
 		},
 		{
 			"hostname": "ITB-1010-CP2",
 			"uipath": "/blueberry",
-			"presets": [
-				"West Display"
-			],
+			"preset": "West Display",
 			"features": [
-                "display-to-all"
-			],
-			"independentAudios": [
+                "share"
 			]
 		}
     ]
