--- a/TMCB-235/config.json
+++ b/TMCB-235/config.json
@@ -2,14 +2,17 @@
 	"api": [
 		"localhost"
 	],
-    "inputConfiguration": [
-        {
-            "name": "HDMI1",
-            "icon": "settings_input_hdmi"
-        }
-    ],
-    "roomWideAudios": [
-    ],
+	"panels": [
+		{
+			"hostname": "TMCB-235-CP1",
+			"uipath": "/blueberry",
+			"presets": [
+				"Projector"
+			],
+			"features": [
+			]
+		}
+	],
 	"presets": [
 		{
 			"name": "Projector",
@@ -22,21 +25,17 @@
 			],
 			"inputs": [
                 "HDMI1"
-			]
-		}
-	],
-	"panels": [
-		{
-			"hostname": "TMCB-235-CP1",
-			"uipath": "/blueberry",
-			"presets": [
-				"Projector"
-			],
-			"features": [
 			],
 			"independentAudios": [
 			]
 		}
-	]
+	],
+  "inputConfiguration": [
+    {
+        "name": "HDMI1",
+        "icon": "settings_input_hdmi"
+    }
+  ],
+  "audioConfiguration": [
+  ]
 }
-
