--- a/TMCB-116/config.json
+++ b/TMCB-116/config.json
@@ -8,8 +8,6 @@
             "icon": "settings_input_hdmi"
         }
     ],
-    "roomWideAudios": [
-    ],
 	"presets": [
 		{
 			"name": "Projector",
@@ -29,12 +27,8 @@
 		{
 			"hostname": "TMCB-116-CP1",
 			"uipath": "/blueberry",
-			"presets": [
-				"Projector"
-			],
+			"preset": "Projector",
 			"features": [
-			],
-			"independentAudios": [
 			]
 		}
 	]
